20_applications/media/audiobookshelf_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: media
  labels:
    app: audiobookshelf-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf-server
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "false"
        prometheus.io/port: "TODO"
      labels:
        app: audiobookshelf-server
    spec:
      containers:
        - name: audiobookshelf
          image: "registry.lab.reisman.org/proxy.ghcr.io/advplyr/audiobookshelf:2.15.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
            - name: audiobooks
              mountPath: /audiobooks
            - name: podcasts
              mountPath: /podcasts
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: config
          emptyDir: {}
        - name: metadata
          emptyDir: {}
        - name: audiobooks
          persistentVolumeClaim:
            claimName: libation-data-pvc
        - name: podcasts
          emptyDir: {}
